[project]
name = "mathlamp-pocket"
version = "0.0.2"
description = "MathLamp strpped down to fit in your pocket"
authors = [
    {name = "RubberSpring",email = "143825964+RubberSpring@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"